# extractor

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: database.py  extract.py  main.py  settings.py
api/app/models/: Extractor.py  base_model.py  extractor.py
api/app/routes/: extract.py  extractors.py
api/app/schemas/: ExtractorSchema.py  extract_schema.py  extractor_schema.py
api/app/ultils/: parser.py  validators.py
api/scripts/: entrypoint.sh  migrations.py
docker/postgresql/: Dockerfile  db_init.sql  postgresql.conf.sample
ui/: app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json
ui/assets/styles/: layout.scss
ui/components/common/: BaseModal.vue  UserDropdown.vue
ui/components/extractor/: ExtractorChat.vue  ExtractorDetail.vue  ExtractorForm.vue  ExtractorList.vue
ui/components/layout/: LayoutNavbar.vue  LayoutPage.vue  LayoutPanel.vue  LayoutPanelContent.vue  LayoutSearchButton.vue  LayoutSidebar.vue  LayoutSidebarLink.vue
ui/composables/: useLayoutState.ts  useResizable.ts
ui/layouts/: default.vue
ui/pages/: index.vue
ui/pages/extractors/: index.vue
ui/services/: ApiService.ts  ExtractService.ts  ExtractorService.ts
ui/types/: index.d.ts  index.ts
